# gr4_ue4_ekf

./: .gitignore  README.md  TODO.md  imu.txt  imu_debug.txt  odometry.txt  plot.py  plot_combined.py  plot_v2.py
archive_plot_python/: odometry_filtered.txt
src/ekf_gr4/: CMakeLists.txt  package.xml
src/ekf_gr4/config/: ekf.yaml
src/ekf_gr4/launch/: ekf_launch.py
src/ekf_gr4/scripts/: plot_combined.py
src/ekf_gr4/src/: recorder.cpp  recorder_v1.cpp  recorder_v2.cpp
