<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_gr4</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robolab@hs-fulda.de">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!--
    This dependency is required for:
    - robot_localization: Provides state estimation nodes (e.g., EKF) for sensor fusion.
  -->
  <exec_depend>robot_localization</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
